--- a/notes_app/pubspec.yaml
+++ b/notes_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.8.1
   intl: ^0.17.0
   staggered_grid_view_flutter: ^0.0.4
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
@@ -101,11 +102,12 @@ flutter:
         - asset: assets/fonts/Australia_Custom.ttf
         - asset: assets/fonts/Australia_Custom_Italic.ttf
           style: italic
-    # - family: Trajan Pro
-    #   fonts:
-    #     - asset: fonts/TrajanPro.ttf
-    #     - asset: fonts/TrajanPro_Bold.ttf
-    #       weight: 700
+    - family: Crystania
+      fonts:
+        - asset: assets/fonts/Crystania.ttf
+    - family: Valid_Harmony
+      fonts:
+        - asset: assets/fonts/Valid_Harmony.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
