--- a/notes_app/pubspec.yaml
+++ b/notes_app/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   intl: ^0.17.0
   staggered_grid_view_flutter: ^0.0.4
   font_awesome_flutter: ^10.3.0
+  google_fonts: ^3.0.1
+  flutter_countdown_timer: ^4.1.0
+  complete_timer: ^1.0.0
+  automatic_animated_list: ^1.1.0
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
